Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54900

Scene3D freezes up when change anchors

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • None
    • 5.7, 5.8
    • Qt3D
    • None
    • Windows 7 x64 SP1, Nvidia GeForce GT 630
      Android 4.4.4
    • bb0f4b48390b5ddc9758f04f6ecd692072fb279f b5800ac037321e161d31ee362688aef179c8d9d2

    Description

      At some random step when I change anchor/anchors of Scene3D item it get totally freeze up, see example and video attached.

      Example based on scene3d-loader qt example, I just add button that show/hide rectangle on the left side (like menu pane) of the scene3d and change anchor.left of the scene3d from parent to right side of rectangle (menu pane).

      Sometimes in this example it needs about 20-50 clicks before Scene3D got frozen.
      In my own, more complex project, it freezes within a several changes of anchors.

      Scene3D freezes up with more enthusiasm on Anrdoid, or on desktop when CPU is loaded with other tasks too.

      For this moment I've never got frozen Scene3D by just changing window size (without changing anchors).

      qt 5.7 commit 8c1e1df4be02de8d64807d7abeccedc6becd3076

      Attachments

        For Gerrit Dashboard: QTBUG-54900
        # Subject Branch Project Status CR V

        Activity

          People

            lemire_p Paul Lemire
            lukegluke Oleg
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes